fix wrong width of multiselects when responsive
see the [Forum post](https://eqdkp-plus.eu/forum/thread/4090-multiselect-menu-problem/)

--- a/templates/eqdkp_modern/eqdkp_modern.css
+++ b/templates/eqdkp_modern/eqdkp_modern.css
@@ -3570,7 +3570,7 @@ button#cboxPrevious, button#cboxNext, button#cboxClose, button#cboxSlideshow {
 	}
 
 	.responsive button.ui-multiselect {
-		width: auto !important;
+		width: 100% !important;
 	}
 
 	.responsive.simple-header.mobile .floatRight  {
